tests/integration/errors/struct_duplicate_field.rsg
// TEST: compile_error
// EXPECT-ERROR: duplicate field 'x'

struct Bad {
    x: i32 = 0
    x: i32 = 1
}

fn main() {
    b := Bad {}
}
